<resources>
    <string name="app_name">Simulator</string>
    <string name="command_line">Command line</string>
    <string name="visual_odometry">Visual Odometry</string>
    <string name="blind_arriving">Blind arriving</string>
    <string name="start_to_follow_of_robot">Start to follow of Mars Rover</string>
    <string name="permission_not_granted">Permission not granted</string>
    <string name="turn_on_flashlights">Turn On Flashlights</string>
    <string name="turn_off_flashlights">Turn Off Flashlights</string>
    <string name="executed">Executed!</string>
    <string name="dont_find_command">I can\'t find this command :(</string>
    <string name="state">State:</string>
    <string name="moveForward">forward</string>
    <string name="moveBack">back </string>
    <string name="moveRight">right</string>
    <string name="moveLeft">left</string>
    <string name="moveforward">moveforward</string>
    <string name="moveback">moveback </string>
    <string name="moveright">moveright</string>
    <string name="moveleft">moveleft</string>
    <string name="robot">Mars Rover is moving</string>
    <string name="on">on</string>
    <string name="meters">meters</string>
    <string name="sleep">Mars Rover is sleeping</string>
    <string name="cancelled">Cancelled</string>
    <string name="list_of_commands">List of commands \n (Where 200, you can use different integer number)</string>
    <string name="info_moveForward">\"move forward 200\" - Mars Rover move forward on 200 meters.</string>
    <string name="info_moveBack">\"move back 200\" - Mars Rover move back on 200 meters.</string>
    <string name="info_moveRight">\"move right 200\" - Mars Rover move right on 200 meters.</string>
    <string name="info_moveLeft">\"move left 200\" - Mars Rover move left on 200 meters.</string>
    <string name="info_sleep">\"sleep\" - Enable sleep mode for Mars Rover.</string>
    <string name="info_flashlights">\"turn on/off flashlights\" - turn on/off flashlights.</string>
    <string name="removeItem">Remove item</string>
    <string name="removeCommand">Do you want to remove command</string>
    <string name="cancel">Cancel</string>
    <string name="ItemRemoved">Removed</string>
    <string name="autoOnOff">\"auto off/on\" - Enable/disable auto mode.</string>
    <string name="tap_here">Tap somewhere to back</string>
    <string name="auto_is_on">Auto mode is enabled</string>
    <string name="auto_is_off">Auto mode is disabled</string>
    <string name="Information">Information</string>
    <string name="distance_traveled">Distance traveled:</string>
    <string name="model_ch_1750upd">Model: CH-1750UPD</string>
    <string name="info_operation_desc">A car-sized Mars rover designed to explore the crater Jezero on Mars as part of NASA\'s Mars 2020 mission. It was manufactured by the Jet Propulsion Laboratory and launched on July 30, 2020, at 11:50 UTC. Confirmation that the rover successfully landed on Mars was received on February 18, 2021, at 20:55 UTC. As of April 23, 2021, Perseverance has been active on Mars for 62 sols (64 Earth days) since its landing. Following the rover\'s arrival, NASA named the landing site Octavia E. Butler Landing. Perseverance has a similar design to its predecessor rover, Curiosity, from which it was moderately upgraded. It carries seven primary payload instruments, 19 cameras, and two microphones. The rover is also carrying the mini-helicopter Ingenuity, or Ginny, an experimental aircraft and technology showcase that made the first powered flight on another planet on April 19, 2021.</string>
</resources>
