<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_colour">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/back_colour">
            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="35dp"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/rambla"
                android:gravity="center"
                android:text="@string/list_of_commands"
                android:textColor="@color/textColour"
                android:textSize="19sp"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="35dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="35dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/rambla"
                android:gravity="center"
                android:text="@string/info_moveForward"
                android:textColor="@color/textColour"
                android:textSize="19sp"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:layout_editor_absoluteX="35dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="35dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/rambla"
                android:gravity="center"
                android:text="@string/info_moveBack"
                android:textColor="@color/textColour"
                android:textSize="19sp"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                tools:layout_editor_absoluteX="35dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="35dp"
                android:fontFamily="@font/rambla"
                android:gravity="center"
                android:layout_marginTop="15dp"
                android:text="@string/info_moveLeft"
                android:textColor="@color/textColour"
                android:textSize="19sp"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="35dp"
                android:fontFamily="@font/rambla"
                android:gravity="center"
                android:text="@string/info_moveRight"
                android:textColor="@color/textColour"
                android:textSize="19sp"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                android:layout_marginTop="15dp"/>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="35dp"
                android:fontFamily="@font/rambla"
                android:gravity="center"
                android:text="@string/info_sleep"
                android:textColor="@color/textColour"
                android:textSize="19sp"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="35dp"
                android:fontFamily="@font/rambla"
                android:gravity="center"
                android:text="@string/info_flashlights"
                android:textColor="@color/textColour"
                android:textSize="19sp"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/imageView_commands_back_to_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</RelativeLayout>